Fix wrapping of long settings nav labels

--- a/mediacore/public/admin/styles/settings.css
+++ b/mediacore/public/admin/styles/settings.css
@@ -20,6 +20,7 @@
 	padding: 5px 0;
 }
 .settings-menu a {
+	display: block;
 	padding-left: 20px;
 	font-size: 16px;
 }
